# fastgoertzel

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml  ci.yml  publish.yml
benchmarks/: benchmark.py
docs/: pypi.md
include/fastgoertzel/: goertzel.hpp
python/fastgoertzel/: __init__.py  _fastgoertzel_core.pyi
src/: goertzel.cpp  goertzel.hpp  lib.rs  python_bindings.cpp
tests/: speed_test.py  test.py  test_goertzel.py
