[package]
name = "fastgoertzel"
description = "Implementation of Goertzel algorithm written in Rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/0zean/fastgoertzel"
homepage = "https://github.com/0zean/fastgoertzel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastgoertzel"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module"] }
