[package]
name = "fastgoertzel"
authors = ["Nicholas Picini"]
description = "Implementation of Goertzel algorithm written in Rust"
version = "0.2.1"
edition = "2021"
readme = "docs/pypi.md"
license = "MIT"
repository = "https://github.com/0zean/fastgoertzel"
homepage = "https://github.com/0zean/fastgoertzel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastgoertzel"
crate-type = ["cdylib"]

[package.metadata.maturin]
rustflags = ["-C", "opt-level=3"]

[dependencies]
ndarray = "0.15.6"
numpy = "0.19"
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module"] }
