[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
    "numpy<=2.2.6",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastgoertzel"
version = "0.1.0"
description = "High-performance Goertzel algorithm implementation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Picini", email = "pd1138@protonmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "numpy<=2.2.6",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-benchmark"]
dev = ["mypy", "ruff"]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-*"
skip = "*-musllinux_i686"