[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
    "numpy>=2.2.6",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastgoertzel"
version = "1.0.1"
description = "High-performance Goertzel algorithm implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Picini", email = "pd1138@protonmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=2.2.6",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-benchmark"]
dev = ["mypy", "ruff"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp312-* cp313-*"
skip = "*-musllinux_i686"

[bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"setup.py" = [
    '__version__ = "{version}"',
]
"python/fastgoertzel/__init__.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    'version = "{version}"$',
]
"src/python_bindings.cpp" = [
    '#define VERSION_INFO "{version}"$',
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "bumpver>=2025.1131",
    "pybind11>=3.0.1",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.14.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
